# structurator

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp
src/structurator/: any_consumer.hpp  arithmetic_utilities.hpp  class_info.hpp  doc_consumer.hpp  doc_input.hpp  input_utilities.cpp  input_utilities.hpp  json_input.cpp  json_input.hpp  meta.hpp  native_consumers.hpp  object_consumer.hpp  object_mapper.hpp  parse_utilities.cpp  parse_utilities.hpp  range_bounded.hpp  ref_string.hpp  simple_errors.hpp  size_bounded.hpp  stdlib_consumers.hpp  utf8.cpp  utf8.hpp  validation.hpp
tests/: CMakeLists.txt  stringify_document.hpp  test_consumers.cpp  test_json.cpp  test_object_consumer.cpp
